--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         jcenter()
         maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven { url 'https://m2.dv8tion.net/releases' }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:4.+'
@@ -29,6 +30,7 @@ repositories {
     maven { url = 'https://impactdevelopment.github.io/maven/' }
     maven { url = 'http://maven-eclipse.github.io/maven' }
     maven { url = 'https://jitpack.io' }
+    maven { url 'https://m2.dv8tion.net/releases' }
 }
 
 minecraft {
@@ -76,6 +78,8 @@ dependencies {
     addLib('club.minnced:java-discord-rpc:v2.0.2') {
         exclude module: 'jna'
     }
+
+    addLib('com.sedmelluq:lavaplayer:1.3.77')
 
     compileOnly('org.jetbrains:annotations:20.1.0')
 
